/*
 * $Id: ChangeLog,v 1.103 2002/03/11 22:58:39 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-03-11 15:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
  * source/rdd/dbf1.c
    ! Corrcted MSVC compiler warnings.

2002-03-11 14:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/garbage.c
  * source/vm/hvm.c
    ! Corrected few compiler warnings.

2002-03-11 14:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprc.c
    ! Corrected 1 compiler warning.

  * source/compiler/harbour.sly
    ! Correted minor bug in GetA

  * source/pp/ppcore.c
    * Some tracing revisions.


2002-03-10 15:25 UTC-0300 Luiz Rafael Culik<culikr@uol.com.br>
  * source/pp/pptable.c
    * Fixed command for SET PRINTER TO
  * source/rtl/set.c
    * Fixed The SET_PRINTFILE
  *utils/hbmake/hbmake.prg
   utils/hbmake/hbmtuils.prg
    * Sync with harbour

2002-03-10 10:35 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbpcode.h
  * source/compiler/genc.c
  * source/compiler/harbour.c
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
  * source/vm/hvm.c
    + Added support for new HB_P_BASELINE
    ! Finalized implementation of line numder optimization.

  * tests/pp.prg
    + Added resetting logic to PP_RunFile()

2002-03-09 16:10 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.c
  * source/vm/hvm.c
    * Additional fine tuning to recent LINE NO Optimization.

2002-03-09 12:01 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.c
  * source/vm/hvm.c
    * Minor correction to recent LINE NO Optimization.

2002-03-09 11:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbpcode.h
  * source/compiler/genc.c
  * source/compiler/harbour.c
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
  * source/vm/hvm.c