@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.103 2002/03/11 22:58:39 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.104 2002/03/11 23:54:54 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-03-11 19:00 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/rtl/set.c
+    + Re-added support for HB_SET_TRACE ( _SET_TRACE ) ON by default.
+      /* Was mistakenly removed by Luiz, on last post. */
+
+  * tests/pp.prg
+    * Added rules reset logic to RP_Dot()
 
 2002-03-11 15:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/pp/ppcore.c
